data/derived/sp14/progs/unify/prog2472.ml.out
Characters 75-82:
  | _ -> List.hd xs + List.tl sumList;;
                              ^^^^^^^
Error: This expression has type int list -> 'a list
       but an expression was expected of type 'b list
